# scg-utils

./: .gitignore  CHANGELOG.md  COLOR_PALETTE_TRANSFORMER.md  CONSOLE_COLOR_SPECS.md  CONSOLE_STYLIZER.md  GIT_SETUP.md  NODE_COMPARISON.md  RAAG_README.md  README.md  REMOTE_LLM_VLM_README.md  __init__.py  nodes.py  nodes_color_palette.py  nodes_conditioning.py  nodes_console_stylizer.py  nodes_lora_scheduler.py  nodes_mask_diff.py  nodes_qwen.py  nodes_raag.py  nodes_remote_llm.py  pyproject.toml
web/js/: scg_conditioning_mixer.js  scg_fast_video.js  scg_load_audio_plus.js
