[project]
name = "comfyui-scg-utils"
version = "1.0.0"
description = "A collection of handy ComfyUI nodes for image manipulation, retro effects, AI integration, and more"
authors = [
    {name = "SanDiegoDude"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["comfyui", "image-processing", "retro", "pixel-art", "console", "dithering"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Artistic Software",
]

dependencies = [
    "Pillow>=9.0.0",
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/SanDiegoDude/scg-utils"
Repository = "https://github.com/SanDiegoDude/scg-utils"
Issues = "https://github.com/SanDiegoDude/scg-utils/issues"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["scg-utils"]




